--- a/librt/librt.3
+++ b/librt/librt.3
@@ -1,6 +1,6 @@
 .TH LIBRT 3B BRL/CAD
 .SH NAME
-librt \- library for raytracing a GED database
+librt \- library for raytracing an MGED database
 .SH SYNOPSIS
 .nf
 \fB#include ``raytrace.h''
@@ -9,8 +9,8 @@ librt \- library for raytracing a GED database
 extern struct rt_functab rt_functab[];
 extern struct rt_g rt_g;
 .sp
-struct rt_i *rt_dirbuild( ged_file_name, buf, len )
-char *ged_file_name;
+struct rt_i *rt_dirbuild( mged_file_name, buf, len )
+char *mged_file_name;
 char *buf;
 int len;
 .sp
@@ -86,7 +86,7 @@ vectp_t h, v;
 .SH DESCRIPTION
 .I rt_dirbuild\^
 opens
-.I ged_file_name\^
+.I mged_file_name\^
 and builds a directory for quick lookup of objects.
 .I rt_dirbuild\^
 returns a pointer to a struct rt_i on success (often called ``rtip''),
@@ -141,8 +141,9 @@ printed on the standard error output.
 All truely fatal errors detected by the library use \fIrtbomb\^
 \fRto exit with a status of 12.
 .SH DEFINITION
-RPP \- Rectangular parallel-piped often used as a rough estimate of a solid
-object's position in 3-space.
+RPP \- Rectangular parallel-piped.
+A region of space defined by minimum and maximum values in X, Y, and Z.
+RPPs are used by librt as the bounding volume for solids.
 .SH DISCUSSION
 You should study the structures in
 .IR raytrace.h\^ ,
@@ -163,6 +164,19 @@ flag in the application structure before calling
 .IR rt_shootray\^ .
 .I rt_shootray\^
 returns the return value of the user-supplied hit or miss function called.
+.P
+If the ray intersects the model, the a_hit() routine is called
+with a pointer to the application structure and a pointer to a
+linked list of ray \fBpartitions\fR (struct partition).  Within each
+partition are \fBsegment\fR and \fBhit\fR structure pointers
+for the places that the ray enters and leaves this partition of space.
+pt_inhit.hit_dist is the parametric distance at which the ray enters
+the partition,
+and pt_outhit.hit_dist is the parameteric distance the ray leaves.
+Note that while the \fBhit\fR structure contains hit_point
+and hit_norm elements, they are not computed by rt_shootray().
+If these are needed, they can be filled in by using the RT_HIT_NORM()
+macro.
 .P
 Helpful in generation a grid of ray origins, the bounding RPP of the
 model is computed as
@@ -230,19 +244,22 @@ struct partition *PartHeadp;
 {
 	register struct partition	*pp = PartHeadp->pt_forw;
 
+	RT_HIT_NORM( pp->pt_inhit, pp->pt_inseg->seg_stp, &(ap->a_ray) );
+	RT_HIT_NORM( pp->pt_outhit, pp->pt_outseg->seg_stp, &(ap->a_ray) );
 	/* Check for flipped normal and fix (if you intend to use it) */
 	if( pp->pt_inflip )  {
-		/* Reverse direction of surface normal */
-		ScaleVec( pp->pt_inhit->hit_normal, -1.0 );
+		VREVERSE( pp->pt_inhit->hit_normal, pp->pt_inhit->hit_normal );
+		pp->pt_inflip = 0;
 	}
 	if( pp->pt_outflip )  {
-		/* Reverse direction of exit normal */
-		ScaleVec( pp->pt_outhit->hit_normal, -1.0 );
+		VREVERSE( pp->pt_outhit->hit_normal, pp->pt_outhit->hit_normal );
+		pp->pt_outflip = 0;
 	}
+
 	/* Do something based on information in partition structure
 	 *	such as output a pixel to the frame buffer
          */
-	light_model( pp->pt_inhit->hit_normal );
+	light_model( pp->pt_inhit );
 	...
 	return	1; /* Report hit to main routine */
 }
@@ -262,9 +279,10 @@ mged(1B), rt(1B)
 .SH DIAGNOSTICS
 "rt_malloc: malloc failure",
 if librt is unable to allocate memory will malloc().
-"routine:  read error", if an error or EOF occures while
+"rt_XXX:  read error", if an error or EOF occures while
 reading from the model database.
 "unexpected SIGFPE!\n" when a floating point error occurs.
+(The rootfinder traps SIGFPE, but SIGFPE elsewhere is unexpected).
 "rt_shootray:  zero length dir vector\n" when the a_ray.r_dir
 vector is not unit length.
 "rt_gettree called again after rt_prep!" when an attempt is made
