--- a/fbed/fbed.1
+++ b/fbed/fbed.1
@@ -1,6 +1,4 @@
-.TH FBED 1V VMB
-'\"	last edit:	86/08/07	G. S. Moss
-'\"	SCCS ID:	@(#)fbed.1	1.22
+.TH FBED 1 BRL/CAD
 .SH NAME
 fbed \- framebuffer editor
 .SH SYNOPSIS
@@ -23,23 +21,21 @@ bitpad to position the cursor on the screen.  This option does not prevent
 the user from positioning the cursor with the keyboard commands also.  The
 .B \-h
 option is for editing
-.SM
-.B HIRES
-(1024x1024x24) images.
+1024x1024 images;  the default is 512x512.
 .SH HINTS
 This program may require a little practice, be sure to save a copy of the
 input files until you are confident.  There is an on-line menu available
 by typing a `?'.  The first time using the program you should start out
 by listing the menu and finding the command for saving (Run-Length Encoding)
 your image and use it if you don't already have a copy.
-.SH CAVIATS
-Even though this program uses the generic framebuffer library, there is only
-support for the
-.I Ikonas\^
-at present in the library.  It will work on
+.P
+.I fbed
+will work on
 .SM
 .B UNIX
-files if you don't need to see what is happening.  As far as data tablets go,
+files if you don't need to see what is happening.
+.SH CAVIATS
+ As far as data tablets go,
 there is currently only support for the
 .SM
 .B GTCO
@@ -49,23 +45,24 @@ for different hardware and multiple devices on the system.
 .SH WARNING
 Be careful not to use the
 .B \-p
-option unless you are sitting next to the
+option unless you are sitting next to a
 .SM
 .B GTCO
-bitpad which is operational.  Currently at
-.SM
-.B BRL
-the only one hooked up is at the
-.SM
-.B VGR
-.IR /dev/ik1\^ .
+bitpad which is operational, or the program will hang.
 .SH EXAMPLE
 .RS
-$ \|\fIfbed \|\-h\fR
+\fIfbed \|\-h\fR
 .RE
-.SH FILES
-/vld/lib/libfb.a
 .SH "SEE ALSO"
-fb-rle(1V), rle-fb(1V), libfb(3V)
+fb-rle(1), rle-fb(1), libfb(3)
 .SH AUTHOR
-G. S. Moss, BRL/VLD-VMB
+Gary S. Moss
+.SH SOURCE
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
+.SH BUG REPORTS
+Reports of bugs or problems should be submitted via electronic
+mail to <CAD@BRL.ARPA>.
