removed B man suffix

--- a/librt/librt.3
+++ b/librt/librt.3
@@ -1,4 +1,4 @@
-.TH LIBRT 3B BRL/CAD
+.TH LIBRT 3 BRL/CAD
 .SH NAME
 librt \- library for raytracing an MGED database
 .SH SYNOPSIS
@@ -305,4 +305,4 @@ This software is Copyright (C) 1985 by the United States Army.
 All rights reserved.
 .SH "BUG REPORTS"
 Reports of bugs or problems should be submitted via electronic
-mail to <GED@BRL.ARPA>.
+mail to <CAD@BRL.ARPA>.
