--- a/rt/rt.1
+++ b/rt/rt.1
@@ -1,4 +1,4 @@
-.TH RT 1B BRL/CAD
+.TH RT 1 BRL/CAD
 .SH NAME
 rt \- raytrace an \fBmged\fP model, giving a shaded picture
 .SH SYNOPSIS
@@ -16,8 +16,10 @@ and produces a color shaded image as the output.
 By default, the output is placed on the current framebuffer
 as it is computed.  The environment variable FB_FILE specifies
 the current framebuffer, see
-.I libfb(3V) .
-Alternatively, the output can be stored in a pixel file (``.pix'' format)
+.IR brlcad (1).
+Alternatively, the output can be stored in a pixel file
+.RI ( pix (5)
+format)
 by specifying
 .B \-o
 .B output.pix
@@ -44,7 +46,7 @@ The
 option is most useful when
 .B rt
 is being invoked from a shell script created by an
-.I mged(1)
+.IR mged (1)
 \fIsaveview\fR command.
 .LP
 The following options are recognized.
@@ -74,10 +76,20 @@ and
 .TP
 .B \-o
 .B output.pix
-Specify the name of a file to store the ``.pix'' format output.
+Specify the name of a file to store the
+.IR pix (5)
+format output.
 The
-.I pix-fb(1b)
+.IR pix-fb (1)
 utility can be used to later display ``.pix'' files.
+.TP
+.B \-O
+.B output.a_pix
+Specify the name of a file to store the ASCII version of the image.
+.IR asc2pix (1)
+can be used to later convert the file to
+.IR pix (5)
+format output.
 .TP
 .B \-x#
 Set debug flags to (hexadecimal) number.  Not generally useful.
@@ -102,34 +114,34 @@ for debugging.
 The
 .B rt
 program is a simple front-end to
-.I librt(3)
+.IR librt (3)
 which can be invoked directly, or via the
 .B rt
 command in
-.I mged(1) .
+.IR mged (1).
 .SH "SEE ALSO"
 mged(1), rtray(1), pix-fb(1), rtray(1), rtpp(1),
-librt(3), ray(5V)
+librt(3), ray(5V), pix(5).
 .SH DIAGNOSTICS
 Numerous error conditions are possible.
 Descriptive messages are printed on standard error.
 .SH AUTHOR
 Michael John Muuss
 .SH SOURCE
- SECAD/VLD Computing Consortium, Bldg 394
- The U. S. Army Ballistic Research Laboratory
- Aberdeen Proving Ground, Maryland  21005
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
 .SH COPYRIGHT
 This software is Copyright (C) 1985 by the United States Army.
 All rights reserved.
 .SH BUGS
-The upper limit of 1024x1024 is pointless, and should be removed.
-.LP
 Most deficiencies observed while using the
 .B rt
 program are usually with the
-.I librt(3)
+.IR librt (3)
 package instead.
 .SH "BUG REPORTS"
 Reports of bugs or problems should be submitted via electronic
-mail to <GED@BRL.ARPA>.
+mail to <CAD@BRL.ARPA>.
