--- a/rt/rtpp.1
+++ b/rt/rtpp.1
@@ -1,4 +1,4 @@
-.TH RTPP 1B BRL/CAD
+.TH RTPP 1 BRL/CAD
 .UC 4
 .SH NAME
 rtpp \- raytrace an \fBmged\fP model, writing a GIFT-style Pretty Picture file
@@ -36,7 +36,7 @@ with the size of the grid (number of pixels) specified with
 This option is most useful when
 .B rtpp
 is being invoked from a shell script created by an
-.I mged(1)
+.IR mged (1)
 \fIsaveview\fR command.
 .LP
 The following options are recognized.
@@ -70,28 +70,30 @@ Set debug flags to (hexadecimal) number.  Not generally useful.
 The
 .B rtpp
 program is a simple front-end to
-.I rtlib(3)
+.IR librt (3)
 which is most useful when used with
-.I mged(1) .
+.IR mged (1).
 In order to display a pretty-picture file,
 the programs
-.I pp-ik(1)
+.IR pp-ik (1)
 and
-.I pp-fb(1)
+.IR pp-fb (1)
 are used.
 .SH "SEE ALSO"
 gift(1V), mged(1), pp-ik(1), pp-fb(1),
 rt(1), rayplot(1), rayvect(1), rtpp(1), rtray(1),
-rtlib(3), ray(5V)
+librt(3), ray(5V).
 .SH DIAGNOSTICS
 Numerous error conditions are possible.
 Descriptive messages are printed on standard error (file descriptor 2).
 .SH AUTHOR
 Michael John Muuss
 .SH SOURCE
- SECAD/VLD Computing Consortium, Bldg 394
- The U. S. Army Ballistic Research Laboratory
- Aberdeen Proving Ground, Maryland  21005
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
 .SH COPYRIGHT
 This software is Copyright (C) 1985 by the United States Army.
 All rights reserved.
@@ -99,8 +101,8 @@ All rights reserved.
 Most deficiencies observed while using the
 .B rtpp
 program are usually with the
-.I rtlib(3)
+.IR librt (3)
 package instead.
 .SH "BUG REPORTS"
 Reports of bugs or problems should be submitted via electronic
-mail to <GED@BRL.ARPA> or ...!decvax!brl-bmd!ged
+mail to <CAD@BRL.ARPA>.
