--- a/rt/rtray.1
+++ b/rt/rtray.1
@@ -1,4 +1,4 @@
-.TH RTRAY 1B BRL/CAD
+.TH RTRAY 1 BRL/CAD
 .UC 4
 .SH NAME
 rtray \- raytrace an \fBmged\fP model, writing a VLD rayfile
@@ -15,7 +15,7 @@ operates on the indicated
 in the input
 .I model.g
 and produces a VLD standard
-.I ray(5V)
+.IR ray (5V)
 format ray file on standard output.
 The orientation of the rays to be fired may be specified by
 the
@@ -37,7 +37,7 @@ with the size of the grid (number of rays fired) specified with
 This option is most useful when
 .B rtray
 is being invoked from a shell script created by an
-.I mged(1)
+.IR mged (1)
 \fIsaveview\fR command.
 .LP
 The following options are recognized.
@@ -71,9 +71,9 @@ Set debug flags to (hexadecimal) number.  Not generally useful.
 The
 .B rtray
 program is a simple front-end to
-.I rtlib(3)
+.IR librt (3)
 which is most useful when used with
-.I mged(1)
+.IR mged (1)
 and the VLD ray filters.
 In order to convert a ray file into a minimal monochrome
 UNIX-plot image for viewing, run
@@ -83,16 +83,18 @@ UNIX-plot image for viewing, run
 
 .SH "SEE ALSO"
 gift(1V), mged(1), rt(1), rayplot(1), rayvect(1), rtray(1), rtpp(1),
-rtlib(3), ray(5V)
+librt(3), ray(5V).
 .SH DIAGNOSTICS
 Numerous error conditions are possible.
 Descriptive messages are printed on standard error (file descriptor 2).
 .SH AUTHOR
 Michael John Muuss
 .SH SOURCE
- SECAD/VLD Computing Consortium, Bldg 394
- The U. S. Army Ballistic Research Laboratory
- Aberdeen Proving Ground, Maryland  21005
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
 .SH COPYRIGHT
 This software is Copyright (C) 1985 by the United States Army.
 All rights reserved.
@@ -102,8 +104,8 @@ The upper limit of 1024x1024 is pointless, and should be removed.
 Most deficiencies observed while using the
 .B rtray
 program are usually with the
-.I rtlib(3)
+.IR librt (3)
 package instead.
 .SH "BUG REPORTS"
 Reports of bugs or problems should be submitted via electronic
-mail to <GED@BRL.ARPA> or ...!decvax!brl-bmd!ged
+mail to <CAD@BRL.ARPA>.
