--- a/fb/pix-fb.1
+++ b/fb/pix-fb.1
@@ -1,80 +1,114 @@
 .TH PIX-FB 1 BRL/CAD
 .SH NAME
-pix-fb \- display a .pix format RGB image file on a framebuffer
+pix-fb \- display a pix format RGB image file on a framebuffer
 .SH SYNOPSIS
 .B pix-fb
-[
-.B \-h
-] [
-.B \-i
-] [
-.B \-c
-] [
-.B \-s\ squaresize
-] [
-.B \-W\ width
-] [
-.B \-H\ height
-] [
-.B file.pix
-]
+.RB [ \-hicz ]
+.RB [ \-F\  framebuffer]
+.RB [ \-s\  squarefilesize]
+.RB [ \-w\  file_width]
+.RB [ \-n\  file_height]
+.RB [ \-S\  squarescrsize]
+.RB [ \-W\  scr_width]
+.RB [ \-N\  scr_height]
+.RB [ \-x\  file_xoff]
+.RB [ \-y\  file_yoff]
+.RB [ \-X\  scr_xoff]
+.RB [ \-Y\  scr_yoff]
+<\ file.pix
 .SH DESCRIPTION
-.I pix-fb
-reads a .pix format file from the named file, or from
-standard input if no file is specified, and displays the
+.I Pix-fb
+reads a
+.IR pix (5)
+format file from the named file, or from
+standard in if no file is specified, and displays the
 image on the currently selected framebuffer.
 The environment variable FB_FILE specifies
 the current framebuffer, see
-.I libfb(3) .
-.P
-By default, the .pix file is assumed to be 512x512 pixels;
-by specifying the
+.IR brlcad (1).
+Alternatively, the framebuffer may be explicitly specified
+by using the
+.B \-F
+flag.
+.PP
+By default, the
+.I pix
+file, and the requested framebuffer size, is assumed to be 512x512 pixels.
+Specifying the
 .B \-h
-flag, the default is changed to 1024x1024.
-.P
+flag changes the size to 1024x1024.
+.PP
 If the
 .B \-i
 flag is specified, the image is output from top to bottom.
-Customarily, .pix files are stored bottom to top, so this flag
+Customarily,
+.I pix
+files are stored bottom to top, so this flag
 inverts the image.
-.P
+.PP
 The
 .B \-c
 flag causes the screen to be cleared before the image is displayed.
 The default behavior is to overwrite the current image
 with the new image without clearing the screen.
-.P
+.PP
 The
-.B \-W\ width
+.B \-z
+flag will zoom and center on the image being displayed
+to make it fill the display area.
+.PP
+The
+.BI \-w\  file_width
 flag specifies the width of each scanline in the input file, in pixels.
-.P
+.BI \-W\  scr_width
+does the same for the display device.
+.PP
 The
-.B \-H\ height
-flag specifies the height of the input file, in scanlines.
-.SH "FORMAT"
-A .pix file contains sequences of pixels.
+.BI \-n\  file_height
+and
+.BI \-N\  scr_height
+flags specifies the height in scanlines of the input file or display device
+respectively.
+.PP
+.BI \-s\  squarefilesize
+and
+.BI \-S\  squarescrsize
+set both the height and width to the size given.
+.PP
+.BI \-x\  file_xoff\  \-y\  file_yoff
+and
+.BI \-X\  scr_xoff\  \-Y\  scr_yoff
+will offset into the file or onto the screen by the given amounts.
+The coordinate system for these offsets is first quadrant, with
+the origin at the lower left corner of the image.
+.SH FORMAT
+A
+.IR pix (5)
+file contains sequences of pixels.
 Each pixel is stored as three \fBunsigned char\fRs,
 first red, then green, then blue.
-The first pixel in a .pix file is the lower left corner of the image.
+The first pixel in a
+.I pix
+file is the lower left corner of the image.
 The pixels proceed from left-to-right across each scanline,
 with scanlines being written from the bottom to the top of the image.
-By convention, .pix images are always square.
+By convention
+.I pix
+images are usually square.
 .SH "SEE ALSO"
-rt(1), fb-pix(1), libfb(3).
+rt(1), fb-pix(1), libfb(3), pix(5)
 .SH DIAGNOSTICS
-If the .pix file is shorter than expected, the program exits silently.
+If the
+.I pix
+file is shorter than expected, the program exits silently.
 .SH AUTHOR
 Michael John Muuss
 .SH SOURCE
- SECAD/VLD Computing Consortium, Bldg 394
- The U. S. Army Ballistic Research Laboratory
- Aberdeen Proving Ground, Maryland  21005
-.SH COPYRIGHT
-This software is Copyright (C) 1985 by the United States Army.
-All rights reserved.
-.SH BUGS
-The upper limit of 2048x2048 is pointless, and should be removed.
-However, it's a rare framebuffer that is that big.
+SECAD/VLD Computing Consortium, Bldg 394
+.br
+The U. S. Army Ballistic Research Laboratory
+.br
+Aberdeen Proving Ground, Maryland  21005
 .SH "BUG REPORTS"
 Reports of bugs or problems should be submitted via electronic
-mail to <GED@BRL.ARPA>.
+mail to <CAD@BRL.ARPA>.
